# fabiantax

./: .gitignore  CLAUDE.md  GITHUB_PROFILE.md  README.md
.claude/: hooks.md
.claude/skills/activity-export/: SKILL.md
.claude/skills/comic-storyboard/: SKILL.md  USER_STORIES.md  comic-storyboard.js
.claude/skills/docs-coord/: skill.md
.claude/skills/git-activity/: SKILL.md
.claude/skills/git-snapshot/: SKILL.md
.claude/skills/github-stats/: SKILL.md
.claude/skills/motion-canvas/: SKILL.md
.claude/skills/readme-analyzer/: SKILL.md  readme-analyzer.js
.claude/skills/video-charts/: SKILL.md
git_activity_dashboard/: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTS.md  USER_STORIES.md  __init__.py  __main__.py  analyzer.py  classifier.py  cli.py  exporters.py  requirements.txt
git_activity_dashboard/examples/: activity-since-nov2025.txt  fetch_readmes.rs
git_activity_dashboard/examples/videos/: ANIMATION_GUIDE.md  GROWTH_STYLES.md  QUICK_EXAMPLES.md  README.md  activity-nov2025-jan2026.json  create-visual-proof.js  debug-frame0.js  diagnose-video.sh  generate-frames.js  test-frame0.js  validation-summary.txt  verify-growth.js  verify-staggered.js
git_activity_dashboard/git_activity_dashboard/examples/: activity-since-nov2025.txt
git_activity_dashboard/pkg/: git_activity_dashboard.d.ts  package.json
git_activity_dashboard/src/: analyzer.rs  classifier.rs  exporters.rs  git.rs  github.rs  lib.rs  parser.rs  periods.rs  traits.rs  utils.rs
git_activity_dashboard/src/tests/: analyzer_tests.rs  classifier_tests.rs  exporters_tests.rs  git_tests.rs
git_activity_dashboard/typescript/: example.ts
git_activity_dashboard/web/: README.md  barcharts.html  constellation.js  embed.html  git-constellation.js  index.html  sample-data.json
repo-readmes/: ANALYSIS_SUMMARY.md  FULL_ANALYSIS.md  readme_Atlas.md  readme_GraphFusion.md  readme_claude-hook-accelerator.md  readme_claude-marketplace.md  readme_fab-pem.md  readme_fab-swarm.md  readme_finance-analyzer.md  readme_git-grind.md  readme_gitpoort.md  readme_graph-nl.md  readme_kintsu.md  readme_mermaid-lint.md  readme_multimodel-mcp-.md  readme_rustfs.md  readme_starion-poc.md  readme_travel.md  readme_vscode-ai-diagnostics.md  readme_wls2-skinny.md  readme_wsl2-manager-tauri.md
repo-readmes/fab-pem/: readme_fab-pem-slim.md  readme_fab-pem-v2.md
repo-readmes/wiki/: ML-Models.md  Performance-Optimization.md
