[package]
name = "git_activity_dashboard"
version = "1.0.0"
edition = "2021"
authors = ["Fabian"]
description = "Analyze git contributions across repositories - CLI and WASM"
license = "MIT"
repository = "https://github.com/fabiantax/fabiantax"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "git-activity"
path = "src/bin/cli.rs"

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "js-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Git operations only available in native builds
git2 = "0.18"
walkdir = "2.4"
ignore = "0.4"  # gitignore pattern matching (same as ripgrep)

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
