[package]
name = "git_activity_dashboard"
version = "1.0.0"
edition = "2021"
authors = ["Fabian"]
description = "Analyze git contributions across repositories - CLI and WASM"
license = "MIT"
repository = "https://github.com/fabiantax/fabiantax"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "git-activity"
path = "src/bin/cli.rs"

[features]
default = ["cli"]
cli = ["clap"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "js-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Performance optimizations
memchr = "2.7"           # SIMD-accelerated byte searching
aho-corasick = "1.1"     # SIMD multi-pattern matching (Aho-Corasick automaton)
phf = { version = "0.11", features = ["macros"] }  # Compile-time perfect hash
rustc-hash = "1.1"       # Fast non-cryptographic hash (FxHash)
once_cell = "1.19"       # Lazy static initialization

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Git operations only available in native builds
git2 = "0.18"
walkdir = "2.4"
ignore = "0.4"  # gitignore pattern matching (same as ripgrep)
rayon = "1.10"  # Parallel processing for snapshot analysis

# GitHub API integration
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Cache directory detection
dirs = "5.0"

# Platform-specific dependencies
libc = "0.2"  # For stdout redirection on Unix

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }  # Benchmarking with statistical analysis

[profile.release]
opt-level = "s"
lto = true
